Last Update Add, Responsiveness -> 14/11 | Finish

--- a/index.html
+++ b/index.html
@@ -27,5 +27,10 @@
   </main>
 
   <script src="./teams-generation.js"></script>
+
+  <div class="alert">
+    <p>Ultima Atualização Feita em 14/11</p>
+    <a href="https://ge.globo.com/futebol/brasileirao-serie-a/" target="_blank">Conferir Tabela Atualizada</a>
+  </div>
 </body>
 </html>
